--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -93,6 +93,10 @@
             padding-top: 20px;
         }
 
+        .errorMsg{
+            color: red;
+        }
+
         .section-header{
             font-size: 30px;
             font-weight: 600;
@@ -486,7 +490,7 @@
                             <div class="slds-grid slds-wrap slds-gutters">
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-5" style="{!IF(!notEnrollNow,'','display:none;')}">
                                     <label>{!$Label.PG_AS_F_Title}</label>
-                                    <apex:inputField styleClass="slds-input slds-combobox__input" value="{!contact.Salutation}"/>
+                                    <apex:inputField styleClass="slds-input slds-combobox__input" style="height: 40px;" value="{!contact.Salutation}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1  {!IF(notEnrollNow,'slds-medium-size_1-of-3','slds-medium-size_1-of-5')}">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_First_name}</label>
@@ -531,11 +535,18 @@
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label>{!$Label.PG_AS_F_Institute_State}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingState}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
+                                    <!--<apex:selectList id="stateId" styleClass="slds-input" style="height: 40px;" size="1" value="{!contact.MailingState}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}">
+                                        <apex:selectOptions value="{!states}"/>
+                                    </apex:selectList>-->
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingState}" rendered="{!!notEnrollNow}" required="false"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Country}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingCountry}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
+                                    <!--<apex:selectList styleClass="slds-input" style="height: 40px;" size="1" value="{!contact.MailingCountry}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}">
+                                        <apex:selectOptions value="{!countries}"/>
+                                        <apex:actionSupport event="onchange" action="{!updateStatesAction}" reRender="stateId"/>
+                                    </apex:selectList>-->
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingCountry}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
