--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -93,6 +93,10 @@
             padding-top: 20px;
         }
 
+        .errorMsg{
+            color: red;
+        }
+
         .section-header{
             font-size: 30px;
             font-weight: 600;
@@ -224,6 +228,10 @@
             width: 33%;
         }
 
+        textarea{
+            line-height: unset !important;
+        }
+
         @media all and (max-width: 767px){
             .cp-save-btn{
                 width: 100%;
@@ -270,6 +278,8 @@
     </style>
 
     <script>
+
+
         function switchVisibility(btnId){
             $('#btn_' + btnId).toggleClass("visible");
             var input = document.getElementById('RRChangePassword:main_form:pwd_' + btnId);
@@ -303,7 +313,7 @@
     <apex:form id="main_form">
 
         <!-- update language function: -->
-        <apex:actionFunction action="{!translateFieldsAction}" name="translateFields" />
+        <apex:actionFunction action="{!translateFieldsAction}" name="translateFields"/>
         <apex:actionFunction action="{!updateBrowserLanguageAction}" name="updateLanguage" onComplete="translateFields();"/>
         <!-- upload photo: -->
         <apex:actionFunction action="{!upload}" name="uploadAF"/>
@@ -521,12 +531,12 @@
                             <div class="slds-grid slds-wrap slds-gutters">
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-5" style="{!IF(!notEnrollNow,'','display:none;')}">
                                     <label>{!$Label.PG_AS_F_Title}</label>
-                                    <apex:inputField styleClass="slds-input slds-combobox__input" value="{!contact.Salutation}"/>
+                                    <apex:inputField styleClass="slds-input slds-combobox__input" style="height: 40px;" value="{!contact.Salutation}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1  {!IF(notEnrollNow,'slds-medium-size_1-of-3','slds-medium-size_1-of-5')}">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_First_name}</label>
                                     <input class="slds-input" type="text" value="{!contact.FirstName}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.FirstName}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.FirstName}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-5" style="{!IF(!notEnrollNow,'','display:none;')}">
                                     <label>{!$Label.PG_AS_F_Middle_name}</label>
@@ -535,7 +545,7 @@
                                 <div class="rr-form-element slds-col slds-size_1-of-1 {!IF(notEnrollNow,'slds-medium-size_1-of-3','slds-medium-size_1-of-5')}">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Last_name}</label>
                                     <input class="slds-input" type="text" value="{!contact.LastName}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.LastName}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.LastName}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-5" style="{!IF(!notEnrollNow,'','display:none;')}">
                                     <label>{!$Label.PG_AS_F_Suffix}</label>
@@ -547,12 +557,12 @@
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Name}</label>
                                     <input class="slds-input" type="text" value="{!account.Name}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!account.Name}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!account.Name}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element  slds-col slds-size_1-of-1 slds-medium-size_2-of-3">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Address_Line}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingStreet}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingStreet}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingStreet}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <!--<div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">-->
                                 <!--<label>Institute Address Line 2</label>-->
@@ -561,27 +571,34 @@
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_City}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingCity}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingCity}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingCity}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label>{!$Label.PG_AS_F_Institute_State}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingState}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
+                                    <!--<apex:selectList id="stateId" styleClass="slds-input" style="height: 40px;" size="1" value="{!contact.MailingState}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}">
+                                        <apex:selectOptions value="{!states}"/>
+                                    </apex:selectList>-->
                                     <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingState}" rendered="{!!notEnrollNow}" required="false"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Country}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingCountry}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingCountry}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <!--<apex:selectList styleClass="slds-input" style="height: 40px;" size="1" value="{!contact.MailingCountry}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}">
+                                        <apex:selectOptions value="{!countries}"/>
+                                        <apex:actionSupport event="onchange" action="{!updateStatesAction}" reRender="stateId"/>
+                                    </apex:selectList>-->
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingCountry}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Zip_Postal_Code}</label>
                                     <input class="slds-input" type="text" value="{!account.BillingPostalCode}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingPostalCode}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.MailingPostalCode}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label><span title="required" class="slds-required" style="{!IF(!notEnrollNow,'','display:none;')}">*</span>{!$Label.PG_AS_F_Institute_Phone_Number}</label>
                                     <input class="slds-input" type="text" value="{!account.Phone}" disabled="true" style="{!IF(notEnrollNow,'','display:none;')}"></input>
-                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.Phone}" rendered="{!!notEnrollNow}" required="{!!notEnrollNow}"/>
+                                    <apex:inputField styleClass="slds-input" type="text" value="{!contact.Phone}" rendered="{!!notEnrollNow}" required="{!notEnrollNow}"/>
                                 </div>
                                 <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                                     <label>{!$Label.PG_AS_F_Institute_Fax_Number}</label>
@@ -700,8 +717,7 @@
 
                         <!-- SAVE Button: -->
                         <div class="cp-save-btn-container">
-                            <apex:actionFunction action="{!checkPasswords}" name="checkPassword"/>
-                            <apex:commandButton onclick="return checkPassword();" action="{!saveUserInfo}" value="{!$Label.PG_Login_BTN_Save_And_Continue}" styleClass="apollo-btn primary cp-save-btn"/>
+                            <apex:commandButton action="{!checkPasswords}" value="{!$Label.PG_Login_BTN_Save_And_Continue}" styleClass="apollo-btn primary cp-save-btn"/>
                         </div>
                         <div class="cp-info-titile" style="color: #000; text-align: center">{!$Label.PG_Login_T_This_Site_Optimized_For}</div>
                         <div style="height: 80px"></div>
