--- a/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.css
+++ b/force-app/main/default/aura/ParticipantCardHeader/ParticipantCardHeader.css
@@ -5,6 +5,12 @@
 .THIS {
     padding: 0 16px;
 }
+
+.THIS > div {
+    display: flex;
+    justify-content: space-between;
+}
+
 .THIS .psec-title-link{
     font-size: 1rem;
     color: #3294fe;
