--- a/force-app/main/default/aura/Action_ManageLocationDetails/Action_ManageLocationDetails.cmp
+++ b/force-app/main/default/aura/Action_ManageLocationDetails/Action_ManageLocationDetails.cmp
@@ -22,13 +22,12 @@
         <c:Popup aura:id="manageLocation" title="{!$Label.c.SS_Manage_Location_Details}" size="large" showScroll="true">
             <c:RRSpinner aura:id="modalSpinner" size="medium" showSpinner="false"/>
             <div class="slds-grid slds-grid_vertical">
-                <div class="slds-grid slds-wrap">
-                    <div class="slds-col slds-size--1-of-5 my-location-label">{!$Label.c.SS_My_Locations}</div>
-                    <div class="slds-col slds-size--5-of-5 slds-grid slds-grid_align-end">
+                <div class="slds-grid slds-wrap location-title-btn">
+                    <div class="slds-col my-location-label">{!$Label.c.SS_My_Locations}</div>
+                    <div class="slds-col slds-grid slds-grid_align-end">
                         <button data-site-id="{!v.studySite.site.Id}"
                                 id="addNewLocation"
-                                class="apollo-btn primary"
-                                style="background-color: white; color: #297DFD;	border: 1px solid #D9D9D9; box-shadow: none; display: inline-block; font-size: 16px;"
+                                class="apollo-btn secondary"      
                                 onclick="{!c.editAccountAddress}">
                             <span>+</span> {!$Label.c.SS_New_Location}
                         </button>
