--- a/force-app/main/default/aura/FilterPanel/FilterPanel.css
+++ b/force-app/main/default/aura/FilterPanel/FilterPanel.css
@@ -19,7 +19,6 @@
 }
 
 .THIS .fp-collapsible{
-    border-top: 2px solid #D9D9D9;
     overflow: hidden;
     max-height: 300px;
     transition: 0.6s;
@@ -39,7 +38,8 @@
 }
 
 .THIS .fp-mobile .fp-search, .THIS .fp-search-input{
-   width: 300px;
+  	text-align: left;
+    margin-bottom: 15px;
 }
 
 .THIS .fp-search-input .rri-container{
@@ -59,8 +59,7 @@
 
 .THIS .fp-pagination-block{
     padding-top: 20px;
-    padding-bottom: 20px;
-    border-top: 2px solid #D9D9D9;
+    border-top: 1px solid #D9D9D9;
 }
 
 .THIS .fp-form-element{
@@ -81,13 +80,13 @@
 .THIS .fp-page-control{
     text-align: right;
     white-space: nowrap;
+    margin-bottom: 15px;
 }
 
 .THIS .fp-page-info > div{
     display: inline-block;
     height: 40px;
     vertical-align: middle;
-    line-height: 40px;
     margin-top: 10px;
 }
 
@@ -148,12 +147,21 @@
         display: inline-block;
     }
 
-    .THIS .fp-page-info > div{
-        margin-top: 0;
-    }
 }
 .THIS .show-more {
-    color: #297DFD!important;
     margin-left: 14px;
     font-size: 13px;
+}
+
+.THIS .show-more a {
+    padding: 4px 8px;
+    display: inline-flex;
+    align-items: center;
+    border-radius: 4px;
+    margin: -4px 0 0 -8px;
+}
+
+.THIS .show-more a:hover {
+    background-color: #eef5ff;
+    transition: .25s;
 }
