--- a/force-app/main/default/aura/LanguageSwitcher/LanguageSwitcher.cmp
+++ b/force-app/main/default/aura/LanguageSwitcher/LanguageSwitcher.cmp
@@ -34,8 +34,8 @@
                 <c:rrSelect options="{!v.languages}" value="{!v.languageKey}" disabled="{!!v.initialized}" class="ls-select" useSentenceFont="{!false}"/>
             </div>
 
-            <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2">
-                <button class="apollo-btn primary" id="0" onclick="{!c.doChangeLanguage}">{!$Label.c.PG_AS_BTN_Save_Preference}</button>
+            <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-4">
+                <button class="apollo-btn secondary" id="0" onclick="{!c.doChangeLanguage}">{!$Label.c.PG_AS_BTN_Save_Preference}</button>
             </div>
         </div>
     </div>
