--- a/force-app/main/default/aura/MedicalRecordReviewLogItem/MedicalRecordReviewLogItem.cmp
+++ b/force-app/main/default/aura/MedicalRecordReviewLogItem/MedicalRecordReviewLogItem.cmp
@@ -19,7 +19,7 @@
     <!-- component body: -->
     <div class="mrrli-container slds-grid slds-wrap slds-grid_align-spread slds-is-relative">
         <c:RRSpinner size="medium" showSpinner="{!v.showSpinner}"/>
-        <div class="mrrli-info slds-col slds-medium-size_2-of-3 slds-size_1-of-1">
+        <div class="mrrli-info slds-col slds-medium-size_1-of-2 slds-size_1-of-1">
             <div class="mrrli-info-top">
                 <div>
                     <aura:if isTrue="{! or(!empty(v.participantEnrollment.Participant_Name__c), !empty(v.participantEnrollment.Participant_Surname__c))}">
@@ -46,17 +46,16 @@
             </div>
         </div>
 
-        <div class="mrrli-buttons slds-col slds-medium-size_1-of-3 slds-size_1-of-1">
+        <div class="mrrli-buttons slds-col slds-medium-size_1-of-2 slds-size_1-of-1">
             <aura:if isTrue="{!v.participantEnrollment.Participant_Status__c == 'Pending Referral'}">
                 <div class="slds-grid slds-wrap">
-                    <div class="slds-col slds-medium-size_1-of-2 slds-size_1-of-1">
-                        <button class="apollo-btn tertiary red" onclick="{!c.excludeFromReferring}"
+                    <div class="slds-col">
+                        <button class="apollo-btn secondary" onclick="{!c.excludeFromReferring}"
                                 disabled="{!v.actions.excludeFromReferring.disabled}"
                                 title="{!v.actions.excludeFromReferring.disableReason}">
                             {!v.actions.excludeFromReferring.label}
                         </button>
-                    </div>
-                    <div class="slds-col slds-medium-size_1-of-2 slds-size_1-of-1">
+                   
                         <button class="apollo-btn primary" onclick="{!c.referToThisTrial}"
                                 disabled="{!v.actions.referToThisStudy.disabled}"
                                 title="{!v.actions.referToThisStudy.disableReason}">
