--- a/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.css
+++ b/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.css
@@ -13,16 +13,12 @@
     line-height: 36px;
 }
 
-.THIS .tabs {
-    margin-top: 25px;
-}
-
 .THIS .tabs .rr-width-limiter {
     background: #fff;
     border-radius: 4px 4px 0 0;
-    border: 1px solid #e9e9e9;
+/*    border: 1px solid #e9e9e9;
     border-width: 1px 1px 0 1px;
-    box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.04);
+    box-shadow: 1px 0 2px 0 rgba(0, 0, 0, 0.04); */
 }
 
 /*=============================TABS=============================*/
