--- a/force-app/main/default/aura/PSEPath/PSEPath.css
+++ b/force-app/main/default/aura/PSEPath/PSEPath.css
@@ -2,25 +2,23 @@
  * Created by Leonid Bartenev
  */
 .THIS {
-}
-
-.THIS .path-panel{
-    background-color: #F8F9FB;
-    border: 1px solid #D9D9D9;
-    border-radius: 5px;
+    padding-top: 15px;
 }
 
 .THIS .path-panel .path-section{
-    border-bottom: 1px solid #D9D9D9;
-    padding-bottom: 10px;
+    padding-bottom: 25px;
 }
 
 .THIS .path-panel .path-section-pi {
     padding-bottom: 10px;
 }
 
+.THIS .vpi-status-btns {
+    padding: 0 0 25px 15px;
+}
+
 .THIS .path-panel .collapse-section{
-    padding: 10px;
+    padding: 10px 0;
     font-size: 14px;
     line-height: 22px;
     transition: 0.6s;
