--- a/force-app/main/default/aura/PSEStatusHistory/PSEStatusHistory.css
+++ b/force-app/main/default/aura/PSEStatusHistory/PSEStatusHistory.css
@@ -55,7 +55,7 @@
 .THIS .line-div.neutral{
     border-left-color: #999999;
 }
-
+/*
 .THIS .line-div.success{
     border-left-color: #55C200;
 }
@@ -68,20 +68,20 @@
 .THIS .line-div.failure{
     border-left-color: #E20000;
 }
-
+*/
 .THIS .state-ico-wrapper.neutral{
     background-color: white;
     border-color: #999999;
 }
 
 .THIS .state-ico-wrapper.success{
-    background-color: #55C200;
-    border-color: #55C200;
+    background-color: #00c221;
+    border-color: #00c221;
 }
 
 .THIS .state-ico-wrapper.in_progress{
-    background-color: #FF9301;
-    border-color: #FF9301;
+    background-color: #00c221;
+    border-color:#00c221;
 }
 
 .THIS .state-ico-wrapper.failure{
@@ -98,7 +98,7 @@
     font-weight: 500;
     line-height: 20px;
 }
-
+/*
 .THIS .path-item-detail-panel.success .title{
     color: #63C900;
 }
@@ -110,7 +110,7 @@
 .THIS .path-item-detail-panel.in_progress .title{
     color: #FF9300;
 }
-
+*/
 .THIS .path-item-detail-panel.neutral .title{
     color: #999999;
 }
@@ -147,7 +147,7 @@
 .THIS .pe-history .history-item + .history-item{
     margin-top: 2px;
 }
-
+/*
 .THIS .info.green{
     color: #00C221;
 }
@@ -158,5 +158,5 @@
 
 .THIS .info.red{
     color: #FF283F;
-
 }
+*/
