--- a/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.css
+++ b/force-app/main/default/aura/ParticipantCardFields/ParticipantCardFields.css
@@ -10,8 +10,8 @@
 
 .THIS.vpi-clip-item-borders{
     overflow: hidden;
-    padding: 0 16px;
-    border-bottom: 1px solid #e9e9e9;
+    padding: 0 16px 15px 5px;
+    border-bottom: 1px solid #d9d9d9;
 }
 
 .THIS .vpi-field{
