--- a/force-app/main/default/aura/Referring/Referring.css
+++ b/force-app/main/default/aura/Referring/Referring.css
@@ -83,18 +83,18 @@
 }
 
 .THIS .pe-large-header{
-    font-size: 60px;
+    font-size: 24px;
     font-weight: 600;
     line-height: 60px;
-    text-align: center;
-    padding: 35px 0;
+    text-align: left;
+    padding: 35px 0 0;
 }
 
 .THIS .pe-panel{
-    border: 1px solid #F2F2F2;
+    border: 1px solid #e9e9e9;
     border-radius: 5px;
     background-color: #FFFFFF;
-    box-shadow: 0 8px 30px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.04);
     text-align: center;
 }
 
@@ -103,29 +103,40 @@
 }
 
 .THIS .pe-panel .rr-icon-default{
-    width: 61px;
-    height: 61px;
+    width: 40px;
     fill: black;
 }
 
 .THIS .between-panels{
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 400;
-    line-height: 85px;
+    line-height: 50px;
     text-align: center;
+    color: #595959;
 }
 
 .THIS .pe-panel .title{
-    font-size: 40px;
+    font-size: 18px;
     font-weight: 600;
-    line-height: 40px;
+	margin-top: 15px;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 5px;
 }
 
 .THIS .rr-sub-title{
+    font-size: 14px;
+    color: #444;
+    font-weight: 400;
     padding: 5px 10px 20px 10px;
+}
+
+.THIS .mrr-items {
+ 	border: none;
+}
+
+.THIS .mrr-item-id,
+.THIS .cReviewStatus.reviw-status {
+    font-size: 14px;
+    color: #444;
 }
 
 .THIS .big-alert{
