--- a/force-app/main/default/aura/ReferringClinicItem/ReferringClinicItem.css
+++ b/force-app/main/default/aura/ReferringClinicItem/ReferringClinicItem.css
@@ -4,7 +4,7 @@
     border: 1px solid #F2F2F2;
     border-radius: 5px 5px 0 0;
     background-color: #FFFFFF;
-    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.04);
     font-family: "Proxima Nova";
     margin-top: 14px;
     margin-bottom: 14px;
@@ -17,9 +17,8 @@
 
 .THIS .rci-study-name {
     width: 100%;
-    border: 1px solid #F2F2F2;
-    background-color: #F9FDFD;
-    color: #297DFD;
+    background-color: #f8f9fb;
+    color: #000;
     font-size: 15px;
     font-weight: 500;
     line-height: 18px;
@@ -42,14 +41,24 @@
 }
 
 .THIS .rci-header .rci-name {
-    color: #297DFD;
-    font-size: 24px;
-    font-weight: 500;
+    color: #297dfd;
+    font-size: 18px;
+    font-weight: 600;
     line-height: 30px;
 }
 
 .THIS .rci-header .rci-info {
-    color: #666666;
-    font-size: 13px;
+    color: #444;
+    font-size: 14px;
     line-height: 16px;
+}
+
+.THIS .rci-header .rci-inline .info-labels {
+    font-weight: 600;
+    margin-right: 5px;
+    color: #000;
+}
+
+.THIS .rci-header .rci-inline:last-child {
+	margin-left: 10px;
 }
