--- a/force-app/main/default/aura/StudyCard/StudyCard.css
+++ b/force-app/main/default/aura/StudyCard/StudyCard.css
@@ -6,12 +6,16 @@
     margin-bottom: 30px;
 }
 
-.THIS .slvi-section + .slvi-section {
-    border-top: 1px solid #F2F2F2;
-}
-
 .THIS .study-name {
     overflow: hidden;
+}
+
+.THIS .slds-grid.slvi-buttons {
+    padding: 0 0 25px 15px;
+}
+
+.THIS .rri-icon .cRRIcon {
+    width: 18px;
 }
 
 .THIS .study-name-pi {
@@ -24,17 +28,17 @@
     text-decoration: none;
     /*height: 30px;*/
     color: #297DFD;
-    font-size: 24px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 600;
     line-height: 30px;
 }
 
 .THIS .sponsor-name {
     height: 20px;
-    color: #999999;
+    color: #595959;
     font-family: "Proxima Nova";
     margin-bottom: 5px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 20px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -45,12 +49,13 @@
     white-space: nowrap;
     margin-left: 10px;
     flex-shrink: 0;
+    font-size: 14px;
 }
 
 .THIS .slvi-objective-section .objective-text {
     height: 16px;
-    color: #333333;
-    font-size: 13px;
+    color: #444;
+    font-size: 14px;
     line-height: 16px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -62,6 +67,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.THIS .slvi-objective-section .cRRLink.rr-link svg {
+    margin-top: 2px;
 }
 
 .THIS .slvi-top-container {
@@ -84,6 +93,12 @@
     color: white;
     font-size: 10px;
     line-height: 10px;
+}
+
+.THIS .study-title.rr-link {
+    color: #000;
+    pointer-events: none;
+  	cursor: default;
 }
 
 .THIS .rri-icon-pi svg {
@@ -110,10 +125,30 @@
 .THIS .slvi-status-item {
     font-size: 14px;
     color: #666666;
+    height: 20px;
+    display: inline-flex;
 }
 
-.THIS .slvi-status-icon {
-    height: 20px;
+.THIS .slvi-status-item img {
+    margin-right: 5px;
+}
+
+.THIS .slvi-status-item > div:last-child {
+    margin-top: 2px;
+}
+
+.THIS .accordion-bar {
+    background-color: #f8f9fb;
+    min-height: 40px; 
+    box-sizing: border-box;
+}
+
+.THIS .accordion-bar .rr-link svg {
+    fill: #595959;
+}
+.THIS .accordion-label {
+    color: #595959;
+    font-size: 1rem;
 }
 
 .THIS .btn-wrapper {
@@ -126,6 +161,10 @@
 
 .THIS .btn-pi-border {
     border-right: 1px solid #F2F2F2;
+}
+
+.THIS .apollo-btn.primary.slvi-search-site-btn {
+    width: 270px;
 }
 
 .THIS .slvi-btn {
@@ -189,7 +228,6 @@
     transition: 0.3s ease-in-out;
     transform: rotate(90deg);
     position: relative;
-    top: -1px;
     margin-right: 3px;
 }
 
@@ -204,15 +242,6 @@
     fill: #297DFD;
     width: 14px;
     height: 14px;
-}
-
-.THIS .rr-link.expanded-icon .rr-icon-default {
-    transform-origin: center;
-    transition: 0.3s ease-in-out;
-    transform: rotate(90deg);
-    position: relative;
-    top: -1px;
-    margin-right: 3px;
 }
 
 .THIS .rr-link.hidden-icon .rr-icon-default {
@@ -242,11 +271,11 @@
 
 @media (max-width: 767px) {
     .THIS .slvi-buttons .slvi-btn + .slvi-btn {
-        border-top: 1px solid #F2F2F2;
+        border-top: 1px solid #f9f9f9;
     }
 
     .THIS .slvi-buttons .slvi-btn + .slvi-btn {
-        border-top: 1px solid #F2F2F2;
+        border-top: 1px solid #f9f9f9;
     }
 
     .THIS .slvi-header-item + .slvi-header-item {
