--- a/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.css
+++ b/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.css
@@ -4,11 +4,8 @@
 .THIS .card-header {
     height: 24px;
     margin: 24px 0 0 auto;
-    padding: 30px 30px 30px 30px;
-    background-color: #F2F2F2;
-    border-top: 1px solid #F2F2F2;
-    border-left: 1px solid #F2F2F2;
-    border-right: 1px solid #F2F2F2;
+    padding: 15px 15px 25px;
+    background-color: #F8f9fb;
 }
 .THIS .pi-name {
     display: inline-block;
@@ -74,7 +71,7 @@
 
 .THIS .ss-lightning-input label {
     height: 21px;
-    color: #666666;
+    color: #444;
     font-family: "Proxima Nova";
     font-size: 13px;
     font-weight: 500;
@@ -83,9 +80,7 @@
 }
 
 .THIS .clinic-type {
-    color: #4A4A4A;
-    font-family: "Proxima Nova";
-    font-size: 15px;
+    font-size: 14px;
     display: inline-block;
     padding-left: 16px;
     padding-bottom: 11px;
@@ -94,9 +89,8 @@
 
 .THIS .input-fields-labels {
     height: 21px;
-    color: #666666;
-    font-family: "Proxima Nova";
-    font-size: 13px;
+    color: #444;
+    font-size: .875rem;
     font-weight: 500;
     line-height: 21px;
 }
@@ -104,7 +98,6 @@
 .THIS .delegate-select {
     width: 100%;
     color: #000000;
-    font-family: "Proxima Nova";
     font-size: 14px;
 }
 
@@ -120,7 +113,7 @@
 }
 
 .THIS .other-ss-info-height-control {
-    min-height: 107px;
+    min-height: 92px;
 }
 
 .THIS .other-ss-info-container {
@@ -138,6 +131,15 @@
     line-height: 24px;
     margin-bottom: 5px;
     vertical-align: top;
+}
+
+.THIS .card-locationDetails {
+    box-sizing: border-box; 
+    border-radius: 4px; 
+    background-color: #F8f9fb; 
+    min-height: 100px; 
+    margin-top:0px; 
+    padding: 0px 15px 25px;
 }
 
 .THIS .check-icon-style {
@@ -159,7 +161,9 @@
 }
 
 .THIS .ss-info-buttons {
-    margin-top: 6%;
+    margin-top: 4%;
+    display: flex;
+    justify-content: flex-start;
 }
 
 @media (max-width: 925px) {
