--- a/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
+++ b/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
@@ -5,14 +5,24 @@
     padding-bottom: 30px;
 }
 .THIS .vpr-header{
-    color:#999999;
-    font-size: 13px;
-    font-weight: 500;
+    color:#444;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 25px;
 }
 
 .THIS .fp-filters-container{
     width: 100%;
 }
+
+.THIS .cFilterPanel {
+    padding-top: 0;
+}
+.THIS .cFilterPanel .fp-filter-block {
+    padding-top: 0;
+}
+
+
 /*.THIS .rrs-container:first-child{
      max-width: 100px !important;
  }
@@ -35,6 +45,12 @@
     max-width: 100px !important;
 }
 
+
+.THIS .vpi-status-btns .slds-col.slds-small-size_4-of-12 {
+    width: auto;
+    margin-top: 15px;
+}
+
 @media (max-width: 341px) {
     .THIS .fp-ss-filter-container {
         min-width: 150px;
@@ -44,5 +60,3 @@
         min-width: 150px;
     }
 }
-
-
