--- a/force-app/main/default/aura/rrSelect/rrSelect.css
+++ b/force-app/main/default/aura/rrSelect/rrSelect.css
@@ -46,4 +46,11 @@
 .THIS .slds-select_container .slds-select{
     padding-right: 30px;
     margin-top: 3px;
+    position: relative;
+}
+
+.THIS .rrs-relative img {
+    position: absolute;
+    right: 7px;
+    top: 11px;    
 }
