--- a/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
+++ b/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
@@ -111,7 +111,7 @@
                     </div>
                     <c:rrSelect options="{!v.statesLVList}" disabled="{!empty(v.statesLVList)}"
                                 value="{!v.participant.Mailing_State_Code__c}"
-                                placeholder="{!$Label.c.PG_AC_Select}" required="true" useSentenceFont="false" onchange="{!c.doCheckFields}"/>
+                                placeholder="{!$Label.c.PG_AC_Select}" required="true" useSentenceFont="false" onchange="{!c.doStateChange}"/>
                 </div>
                 <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
                     <div class="label"><abbr title="required"
