--- a/force-app/main/default/aura/ReferHealthcareProviderForm/ReferHealthcareProviderForm.cmp
+++ b/force-app/main/default/aura/ReferHealthcareProviderForm/ReferHealthcareProviderForm.cmp
@@ -49,7 +49,7 @@
                         $Label.c.RSN_Your_permissions_do_not_permit_this_action : v.isDuplicate ?
                         $Label.c.HealCare_Provider_Already_Connected : ''}">{!$Label.c.HealthCare_Provider_Connect}</button>
             </aura:if>
-            <aura:if isTrue="{!v.healthCareProvider.Id && v.healthCareProvider.Status__c != 'No Sharing'}">
+            <aura:if isTrue="{!v.healthCareProvider.Id &amp;&amp; v.healthCareProvider.Status__c != 'No Sharing'}">
                 <button class="apollo-btn tertiary " style="padding:0;height:40px;min-width:160px"
                         onclick="{!c.doDisconnect}">{!$Label.c.HealthCare_Provider_Stop_Sharing}</button>
             </aura:if>
