Clinical Trial Profile Tab fix

--- a/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
+++ b/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
@@ -17,7 +17,7 @@
     <ltng:require scripts="{!$Resource.rr_community_js}" afterScriptsLoaded="{!c.doInit}"/>
 
     <div class="panel">
-        <aura:if isTrue="{!v.permission != 'disabled'}">
+        <aura:if isTrue="{!v.permission != 'Disabled'}">
             <aura:set attribute="else">
                 <c:EmptyListStub message="{!$Label.c.No_permission_Visits_tab}"/>
             </aura:set>
@@ -58,7 +58,7 @@
                                     recordLoadError=" "
                             />
                         </div>
-                        <aura:if isTrue="{! v.permission == 'edit'}">
+                        <aura:if isTrue="{! v.permission == 'Edit'}">
                             <div class="slds-col slds-size--4-of-12 slds-var-m-top_x-small">
                                 <lightning:button onclick="{!c.showModal}"
                                                   class="slds-theme_neutral slds-m-around--medium"
@@ -107,7 +107,7 @@
                                                           class="uiInput--checkbox slds-medium-show--inline-block slds-float--left slds-m-right--x-small slds-dl_horizontal__label"
                                                           label="{!vendor.Id}" labelClass="slds-hide"
                                                           change="{!c.columnCheckboxStateChange}"
-                                                          disabled="{!v.permission == 'read'}"/>
+                                                          disabled="{!v.permission == 'Read'}"/>
                                         <label>{!vendor.Name}</label>
                                     </div>
                                 </th>
@@ -134,7 +134,7 @@
                                     <td>
                                         <ui:inputCheckbox value="{!selectedVendorIdSetting.isEnable__c}"
                                                           label="{!selectedVendorIdSetting.Vendor__r.Name}"
-                                                          disabled="{!v.permission == 'read'}"
+                                                          disabled="{!v.permission == 'Read'}"
                                                           class="uiInput--checkbox"/>
                                     </td>
                                 </aura:iteration>
