--- a/force-app/main/ui-community-template/first-login/LoginInfo.component
+++ b/force-app/main/ui-community-template/first-login/LoginInfo.component
@@ -6,16 +6,10 @@
     <apex:attribute name="newPassword" description="" type="String" required="true"/>
     <apex:attribute name="verifyNewPassword" description="" type="String" required="true"/>
     <apex:attribute name="translation" description="" type="Translation__c" required="true"/>
-    <apex:attribute name="isPaswordsEquals" description="" type="Boolean" required="true"/>
+    <apex:attribute name="isPasswordsEquals" description="" type="Boolean" required="true"/>
     <apex:attribute name="userVal" description="" type="User" required="true"/>
 
     <style>
-        .section-header{
-            font-size: 30px;
-            font-weight: 600;
-            line-height: 36px;
-        }
-
         .button-eye{
             width:26px;
             height: 40px;
@@ -27,11 +21,6 @@
 
         .button-eye.visible{
             fill: #297DFD;
-        }
-
-        .slds-gutters {
-            margin-right: -0.75rem;
-            margin-left: -0.75rem;
         }
 
         .rr-form-element{
@@ -72,13 +61,13 @@
     <apex:outputPanel id="login_info_form">
         <div class="section-header">{!$Label.PG_Login_H_Login_Information}</div>
         <apex:messages styleClass="lg-error-alert" lang="{!translation.Language__c}"/>
-        <apex:outputPanel styleClass="error-description" rendered="{!!isPaswordsEquals}">{!$Label.PG_Login_T_Passwords_do_not_match}</apex:outputPanel>
+        <apex:outputPanel styleClass="error-description" rendered="{!!isPasswordsEquals}">{!$Label.PG_Login_T_Passwords_do_not_match}</apex:outputPanel>
         <div class="slds-grid slds-wrap slds-gutters">
             <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                 <label>{!$Label.PG_Login_F_User_Name}</label>
                 <input type="text" value="{!userVal.Username}" disabled="true" class="slds-input"></input>
             </div>
-            <div class="rr-form-element {!IF(!isPaswordsEquals, 'error', '')} slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
+            <div class="rr-form-element {!IF(!isPasswordsEquals, 'error', '')} slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                 <label>{!$Label.PG_AS_F_New_password}</label>
                 <div class="password-input">
                     <apex:inputSecret value="{!newPassword}" redisplay="true" id="pwd_password" styleClass="slds-input input-new-password"/>
@@ -87,7 +76,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="rr-form-element {!IF(!isPaswordsEquals, 'error', '')} slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
+            <div class="rr-form-element {!IF(!isPasswordsEquals, 'error', '')} slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
                 <label>{!$Label.PG_AS_F_Re_enter_new_password}</label>
                 <div class="password-input">
                     <apex:inputSecret value="{!verifyNewPassword}" redisplay="true" id="pwd_confirm" styleClass="slds-input input-new-confirm"/>
