--- a/force-app/main/ui-community-template/first-login/ChangePassword.page
+++ b/force-app/main/ui-community-template/first-login/ChangePassword.page
@@ -12,236 +12,6 @@
     <apex:includeScript value="{!$Resource.jquery224}"/>
     <apex:includeScript value="{!$Resource.rr_community_js}"/>
 
-    <style>
-        .all-content {
-            height: 100%;
-            width: 100%;
-            font-family: "Proxima Nova";
-        }
-
-        .footer {
-        }
-
-        .width-limiter {
-            height: 100%;
-            width: 100%;
-        }
-
-        .header-block {
-            display: flex;
-            align-items: center;
-            height: 100%;
-        }
-
-
-        .body-content {
-            vertical-align: top;
-            display: block;
-        }
-
-
-        .logo-block {
-            /*height: 39px;*/
-            width: 123px;
-        }
-
-        .current-state {
-            border-bottom: 1px solid #D9D9D9;
-            background: #F8F9FB;
-            height: 42px;
-            position: fixed;
-            top: 50px;
-        }
-
-        .thick-line {
-            height: 5px;
-            background-color: #AAB0B3;
-        }
-
-        .thick-line.selected {
-            background-color: #9014FE;
-        }
-
-        .line-info {
-            color: #AAB0B3;
-            text-align: center;
-            font-size: 12px;
-            line-height: 20px;
-        }
-
-        .line-info.selected {
-            color: #9014FE;
-        }
-
-        .line-tabs {
-            width: 100%;
-        }
-
-        .line-tabs tr td {
-            padding: 10px;
-            padding-bottom: 0;
-            width: 50%;
-        }
-
-        .main-header {
-            font-size: 60px;
-            font-weight: 600;
-            line-height: 1;
-            text-align: center;
-            padding-top: 20px;
-        }
-
-        .errorMsg {
-            color: red;
-        }
-
-        .section-header {
-            font-size: 30px;
-            font-weight: 600;
-            line-height: 36px;
-        }
-
-        .button-eye {
-            width: 26px;
-            height: 40px;
-            position: absolute;
-            right: 10px;
-            bottom: 0;
-            display: inline-block;
-        }
-
-        .button-eye.visible {
-            fill: #297DFD;
-        }
-
-        .alert {
-            color: white;
-            background: linear-gradient(to right, #230559 0%, #036ca7 100%);
-            padding: 20px;
-            text-align: center;
-            margin: 15px 0;
-
-        }
-
-        .slds-gutters {
-            margin-right: -0.75rem;
-            margin-left: -0.75rem;
-        }
-
-        .slds-gutters .slds-col {
-            padding-right: 0.75rem;
-            padding-left: 0.75rem;
-        }
-
-        .rr-form-element {
-            margin-top: 10px !important;
-            margin-bottom: 10px !important;
-        }
-
-        .rr-form-element .password-input {
-            position: relative;
-        }
-
-        .rr-form-element.error input {
-            border-color: red;
-        }
-
-        .section-description {
-            color: #333333;
-            font-size: 13px;
-            line-height: 16px;
-        }
-
-        .error-description {
-            font-size: 13px;
-            line-height: 16px;
-            color: red;
-        }
-
-        .footer {
-            background-color: #F2F2F2;
-        }
-
-        .copyright {
-            color: #666666;
-            font-size: 13px;
-            line-height: 16px;
-            padding: 33px 0 30px 0;
-            display: block;
-            text-align: right;
-        }
-
-        .rr-bottom-bar .bar-content {
-            justify-content: right;
-        }
-
-        .tc-accept-text {
-            color: #666666;
-            margin-right: auto;
-        }
-
-        .cp-save-btn-container {
-            height: 50px;
-            margin-top: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: baseline;
-        }
-
-        .cp-save-btn {
-            width: 33%;
-        }
-
-        textarea {
-            line-height: unset !important;
-        }
-
-        @media all and (max-width: 767px) {
-            .cp-save-btn {
-                width: 100%;
-            }
-
-            .cp-language-blank {
-                display: none;
-            }
-        }
-
-        @media all and (min-width: 768px) {
-            .cp-information-container {
-                padding-left: 120px;
-                padding-right: 120px;
-            }
-        }
-    </style>
-
-    <style>
-        /* styles for language options input fields */
-        button.slds-button_icon::before {
-            content: attr(help-text);
-            border-radius: 5px;
-            padding: 10px;
-            font-size: 12px;
-            line-height: 18px;
-            position: absolute;
-            z-index: 999;
-            text-align: left;
-            bottom: 9999px;
-            left: 50%;
-            background: #042459;
-            color: #e0e0e0;
-            min-height: 32px;
-            min-width: 200px;
-            opacity: 0;
-            transition: opacity 0.4s ease-out;
-        }
-
-        button.slds-button_icon:hover::before {
-            opacity: 1;
-            bottom: 24px;
-            left: -130px;
-        }
-    </style>
-
     <script>
         //init SVG for EveryBbody
         $(document).ready(function () {
@@ -270,7 +40,7 @@
 
         <!-- change password page: -->
         <apex:outputPanel rendered="{!!user.Contact.Is_First_Logon__c}">
-            <c:ChangePassword/>
+<!--            <c:ChangePassword/>-->
         </apex:outputPanel>
 
         <!-- register page: -->
