Apollo styling fixes.

--- a/force-app/main/default/aura/AccountSettings/AccountSettings.css
+++ b/force-app/main/default/aura/AccountSettings/AccountSettings.css
@@ -70,6 +70,10 @@
 }
 
 
+.THIS .collapse-section.slds-m-top_large,
+.THIS .collapse-section.slds-m-top--large {
+    margin-top: 0;
+}
 
 .THIS .rr-link{
     color: #297DFD;
