--- a/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.css
+++ b/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.css
@@ -37,11 +37,11 @@
 .THIS .label.changed {
     color: #297dfd;
 }
-
+/*
 .THIS .path-item-detail-panel > .slds-col {
     width: auto;
 }
-
+*/
 .THIS .pe-history {
     margin-top: 10px;
 }
