--- a/force-app/main/default/aura/FilterPanel/FilterPanel.css
+++ b/force-app/main/default/aura/FilterPanel/FilterPanel.css
@@ -3,7 +3,6 @@
  */
 .THIS{
     font-size: 13px;
-    padding-top: 15px;
     padding-bottom: 0;
 }
 
@@ -12,10 +11,9 @@
 }
 
 .THIS .fp-filter-block{
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 10px;
     padding-right: 2px;
-
 }
 
 .THIS .fp-collapsible{
@@ -39,7 +37,9 @@
 
 .THIS .fp-mobile .fp-search, .THIS .fp-search-input{
   	text-align: left;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    width: 225px;
+    margin-top: 3px;
 }
 
 .THIS .fp-search-input .rri-container{
@@ -47,6 +47,7 @@
     width: inherit;
 }
 
+.THIS .fp-search .rri-container .slds-input,
 .THIS .fp-search-input .rri-container .slds-input  {
 	padding-left: 25px;   
     background: #fff url(/resource/1570111512000/searchIcon) no-repeat 7px 9px;
@@ -59,7 +60,7 @@
 
 .THIS .fp-pagination-block{
     padding-top: 20px;
-    border-top: 1px solid #D9D9D9;
+    border-top: 1px solid #d9d9d9;
 }
 
 .THIS .fp-form-element{
@@ -113,7 +114,8 @@
 
 .THIS .fp-main-filter-block{
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    justify-content: space-between;
 }
 
 .THIS .fp-filters-container{
@@ -131,7 +133,7 @@
 
 .THIS .fp-filters-container .rrs-container{
     display: inline-block;
-    max-width: 180px;
+    max-width: 245px;
     margin: 5px;
 }
 
