--- a/force-app/main/default/aura/RRCollapse/RRCollapse.css
+++ b/force-app/main/default/aura/RRCollapse/RRCollapse.css
@@ -40,6 +40,8 @@
     color: #595959;
     transition: background-color .5s;
     height: 49px;
+    border-bottom: 1px solid #e9e9e9;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.05);
 }
 
 .THIS.rr-collapse-panel .body{
