--- a/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.css
+++ b/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.css
@@ -62,6 +62,7 @@
 
 .THIS #contactInformation .ss-info-details:nth-child(4) {
     margin-left: 16px;
+    margin-top: 6px;
 }
 
 .THIS #contactInformation .ss-info-details:last-child {
@@ -83,8 +84,9 @@
     font-size: 14px;
     display: inline-block;
     padding-left: 16px;
-    padding-bottom: 11px;
+    padding-bottom: 5px;
     vertical-align: bottom;
+    color: #000;
 }
 
 .THIS .input-fields-labels {
