--- a/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
+++ b/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.css
@@ -5,10 +5,10 @@
     padding-bottom: 30px;
 }
 .THIS .vpr-header{
-    color:#444;
+    color: #444;
     font-size: 16px;
     font-weight: 400;
-    margin-bottom: 25px;
+    margin-bottom: 5px;
 }
 
 .THIS .fp-filters-container{
@@ -18,10 +18,18 @@
 .THIS .cFilterPanel {
     padding-top: 0;
 }
+
 .THIS .cFilterPanel .fp-filter-block {
     padding-top: 0;
 }
 
+.THIS .cParticipantCardFields .vpi-field {
+    flex: 0 0 15%;
+}
+
+.THIS .cParticipantCardFields .vpi-field label{
+    white-space: nowrap;
+}
 
 /*.THIS .rrs-container:first-child{
      max-width: 100px !important;
@@ -44,7 +52,6 @@
 .THIS .fp-study-filter-container {
     max-width: 100px !important;
 }
-
 
 .THIS .vpi-status-btns .slds-col.slds-small-size_4-of-12 {
     width: auto;
