--- a/force-app/main/default/staticresources/rr_community_css.css
+++ b/force-app/main/default/staticresources/rr_community_css.css
@@ -507,6 +507,21 @@ input:focus {
     visibility: hidden;
 }
 
+
+lightning-datepicker .slds-input-has-icon > lightning-button-icon:after {
+    content: '';
+    position: absolute;
+    background-size: 16px 16px;
+    background-image: url(/resource/1569261183000/iconCalendar);
+    height: 16px;
+    width: 16px;
+    top: -2px;
+    right: 0px;
+}
+
+lightning-datepicker lightning-button-icon .slds-button svg {
+    display: none;
+}
 /*-------------------------------------------------------- Output -------------------------------------------------------------*/
 
 .rr-output-field{
@@ -589,15 +604,15 @@ select.rr-select-error,
     color: #CCCCCC;
     border-top: 5px solid;
     text-align: center;
-    font-size: 10px;
+    font-size: 14px;
     line-height: 12px;
     padding-top: 4px;
     transition: 0.4s;
 }
 
 .rr-path-item.completed, .rr-path-item.current{
-    border-top-color: #9014FE;
-    color: #9014FE;
+    border-top-color: #00c221;
+    color: #000;
 
 }
 
@@ -1100,8 +1115,9 @@ select.rr-select-error,
 }
 
 .brand-gradient-background{
-    background: linear-gradient(to right, #230559 0%,#036ca7 100%);
-    color: white;
+    background: #f8f9fb;
+ /*   background: linear-gradient(to right, #230559 0%,#036ca7 100%); */
+    color: #444;
 }
 
 input[type=password]::-ms-reveal,
@@ -1112,7 +1128,7 @@ input[type=password]::-ms-clear
 
 .rr-login-info-title{
     opacity: 0.7;
-    color: #FFFFFF;
+    color: #000;
     font-size: 15px;
     line-height: 24px;
     text-align: center;
